Returning forked compilation. Jenkins Maven plugin doesn't support ./mvn/jvm.config.